fixed page heading overlay on mobile

--- a/midtown/style.css
+++ b/midtown/style.css
@@ -238,7 +238,7 @@ section.parallax {
     height: 350px;
     width: 100vw;
     margin-top: -40px;
-    margin-left: -30px;
+    margin-left: -30px;   
 }
 
 /* MAP */
@@ -405,6 +405,11 @@ nav.shrink .navbar-brand img {
 
     .footer span {
         font-size: 2.8rem;
+    }
+
+    /* Parallax  */
+    .parallax .container-fluid::before {
+        margin-left: -13px;
     }
 }
 
